# C_Exercises

./: CMakeLists.txt  README.md  Zad_5_.c
Zadania_1/: Zad_1_.c  Zad_2_.c  Zad_3_.c  Zad_4_.c  Zad_6_.c
Zadania_2/: Zad_1_.c  Zad_2_.c  Zad_3_.c  Zad_4_.c  Zad_5_.c  Zadania.md
Zadania_3/: Zad_1_.c  Zad_2_.c
Zadania_4/: Zad_1_.c  Zad_2_.c  Zad_3_.c
Zadania_5/: Zad_1_.c  Zad_2_.c  Zad_3_.c  Zad_4_.c  Zad_5_.c  Zad_6_.c
Zadania_6/: Zad_1_.c  Zad_2_.c  Zad_3_.c
Zadania_7/: Zad_1_.c  Zad_2_.c
